--- a/islaDelColor/inicio.html
+++ b/islaDelColor/inicio.html
@@ -20,13 +20,12 @@
         <li><a href="#historia">Leyenda</a></li>
         <li><a href="#brujula">Brújula</a></li>
         <li><a href="#mapa">Mapa</a></li>
-        <!--Descripción de las funciones de cada una los temas, el generador y al azar-->
         <li><a href="#tesoros">Tesoros</a></li>
         </ul>
     </header>
 
     <!-- Hero principal -->
-    <section id="hero" class="container">
+    <section id="hero" class="hero" >
         <h1>🏴‍☠️ ¡Bienvenido a la Isla del Color! 🏝️</h1>
         <p>
         Embárcate en sus profundas y místicas aguas  
@@ -37,7 +36,7 @@
     </section>
 
     <!-- Narrativa -->
-    <section id="historia" class="container">
+    <section id="historia">
         <h2>Leyenda</h2>
         <p>
         En las profundidades del océano, más allá de las rutas conocidas,  
@@ -64,7 +63,7 @@
     </section>
 
     <!-- Sección de brújula -->
-    <section id="brujula" class="container">
+    <section id="brujula">
         <h2><img class="brujula" src="https://img.freepik.com/fotos-premium/brujula-dibujos-animados-caja-metal-mango-metal-generativo-ai_791316-26071.jpg" alt="Brújula">Brújula</h2>
         <p>
             En <b>colores por tema</b>, la brújula te guiará a través de las combinaciones sorprendentes según el tema que quieras desde algo elegante hasta lo más extravagante.
@@ -74,7 +73,7 @@
     </section>
 
     <!-- Sección de tesoros -->
-    <section id="tesoros" class="container">
+    <section id="tesoros">
         <h2>Guía de tesoros</h2>
         <p> Aqui encontrarás información sobre la teoría del color y cómo combinar colores de manera efectiva para tus proyectos.
 
