--- a/islaDelColor/temaColores/indexTemas.html
+++ b/islaDelColor/temaColores/indexTemas.html
@@ -24,6 +24,31 @@
         <p>Selecciona un tema para ver una paleta de colores relacionada.</p>
     </header>    
 
+    <label for="tema">Tema:</label>
+  <select id="tema">
+    <option value="pastel">Pastel</option>
+    <option value="vibrante">Vibrante</option>
+    <option value="oscuro">Oscuro</option>
+  </select>
+
+  <label for="colorBase">Color base:</label>
+  <select id="colorBase">
+    <option value="rojo">Rojo</option>
+    <option value="naranja">Naranja</option>
+    <option value="amarillo">Amarillo</option>
+    <option value="verde">Verde</option>
+    <option value="azul">Azul</option>
+    <option value="morado">Morado</option>
+    <option value="rosa">Rosa</option>
+    <option value="negro">Negro</option>
+    <option value="gris">Gris</option>
+    <option value="blanco">Blanco</option>
+  </select>
+
+  <button class="buscar" onclick="generateThemePalette()">Generar Paleta</button>
+
+  <div id="paletteContainer"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
