--- a/islaDelColor/inicio.html
+++ b/islaDelColor/inicio.html
@@ -62,7 +62,7 @@
 
         <h2><img class="brujula" src="https://img.freepik.com/fotos-premium/brujula-dibujos-animados-caja-metal-mango-metal-generativo-ai_791316-26071.jpg" alt="Brújula">Brújula</h2>
         <p>
-            En <b>colores por tema</b>, la brújula te guiará a través de las combinaciones sorprendentes según el tema que quieras desde algo elegante hasta lo más extravagante.
+            En <b>colores por tema</b>, navegaras a través de las combinaciones sorprendentes según el tema que quieras desde algo elegante hasta lo más extravagante.
             <b>Ingresar un color</b> te permitirá descubrir paletas armoniosas basadas en tu elección.
             Y si te sientes aventurero, <b>el generador de paletas al azar</b> te llevará a explorar combinaciones inesperadas y únicas.
         </p>
