--- a/islaDelColor/temaColores/indexTemas.html
+++ b/islaDelColor/temaColores/indexTemas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,9 +9,9 @@
 </head>
 <body>
 
+    <!-- Menú pirata -->
     <nav class="menu">
         <ul>
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-map-route"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 7l6 -3l6 3l6 -3v13l-6 3l-6 -3l-6 3v-13" /><path d="M9 12v.01" /><path d="M6 13v.01" /><path d="M17 15l-4 -4" /><path d="M13 15l4 -4" /></svg>
             <li><a href="../inicio.html">Mapa</a></li>
             <li><a href="../temaColores/indexTemas.html">Colores por tema</a></li>
             <li><a href="../generadoDePaletasDeColores/indexGenerador.html">Paletas al azar</a></li>
@@ -19,39 +19,33 @@
         </ul>
     </nav>
 
+    <!-- Encabezado -->
     <header>
         <h1>Colores por tema</h1>
         <p>Selecciona un tema para ver una paleta de colores relacionada.</p>
     </header>    
 
-   <div class="form-container">
-  <h2>⚓ Configura tu paleta pirata ⚓</h2>
-  <label for="tema">Tema:</label>
-  <select id="tema">
-    <option value="pastel">Pastel</option>
-    <option value="vibrante">Vibrante</option>
-    <option value="oscuro">Oscuro</option>
-  </select>
+    <!-- Formulario -->
+    <div class="form-container">
+        <h2>Configura tu paleta pirata</h2>
+        <label for="tema">Tema:</label>
+        <select id="tema">
+            <option value="Analogo">Análogo</option>
+            <option value="Complementario">Complementario</option>
+            <option value="Triadico">Tríadico</option>
+            <option value="Tetradico">Tetrádico</option>
+        </select>
 
-  <label for="colorBase">Color base:</label>
-  <select id="colorBase">
-    <option value="rojo">Rojo</option>
-    <option value="naranja">Naranja</option>
-    <option value="amarillo">Amarillo</option>
-    <option value="verde">Verde</option>
-    <option value="azul">Azul</option>
-    <option value="morado">Morado</option>
-    <option value="rosa">Rosa</option>
-    <option value="negro">Negro</option>
-    <option value="gris">Gris</option>
-    <option value="blanco">Blanco</option>
-  </select>
-</div>
+        <form id="color-form">
+            <label for="color-input">Ingresa un color:</label>
+            <input type="color" id="color-picker" value="#FFFFFF">
+            <input type="text" id="color-input" value="#FFFFFF">
+            <button type="button" class="buscar" onclick="generateThemePalette()">Generar Paleta</button>
+        </form>
+    </div>
 
-
-  <button class="buscar" onclick="generateThemePalette()">Generar Paleta</button>
-
-  <div id="paletteContainer"></div>
+    <!-- Contenedor de paletas -->
+    <div id="paletteContainer"></div>
 
     <script src="script.js"></script>
 </body>
