--- a/islaDelColor/temaColores/indexTemas.html
+++ b/islaDelColor/temaColores/indexTemas.html
@@ -25,20 +25,24 @@
     <p>Ingresa un tema y crea tus paletas personalizadas</p>
 </header>
 
+
 <main>
     <div class="form-container">
         <input type="text" id="tema" placeholder="Escribe un tema...">
         <button class="generar" onclick="generateThemePalette()">Generar Paletas</button>
     </div>
-
+    
     <div id="specsContainer">
         <h3>Color especifico:</h3>
         <input type="text" id="specInput" placeholder="Añadir color especifico...">
         <button class="generar" onclick="addSpec()">Añadir</button>
         <div id="specList"></div>
     </div>
-
+    
     <div id="paletteContainer"></div>
+    <!--Alerta por si el usuario no ingreso un tema-->
+    <div id="toast"></div>
+
 </main>
 <script src="script.js"></script>
 </body>
